--- a/Componentes/Programas/programas.html
+++ b/Componentes/Programas/programas.html
@@ -2,6 +2,7 @@
 <html>
     <head>
         <meta charset="UTF-8">
+	 <link rel="stylesheet" href="programas.css">
         <link rel="shortcut icon" type="image/x-icon" href="img/logou.ico" />
         <title> 
             Menu de programas
@@ -9,9 +10,9 @@
     </head>
 
     <body>
-        <h1> Universidad RePiquiñas </h1>
+        <h1> <div> <p style="color: #8B0000 ;"> Universidad WinRiC </p> </div> </h1>
         <hr> <br>
-        <h1> Menú de programas </h1> <br>
+        <h1>  <p style="color: #8B0000 ;"> Menú de programas </p> </h1> <br>
 
         <p>
             Favor digite  los campos para la captura de la programas: <br> <br>
