--- a/Componentes/Estudiantes/estudiantes.html
+++ b/Componentes/Estudiantes/estudiantes.html
@@ -2,6 +2,7 @@
 <html>
     <head>
         <meta charset="UTF-8">
+	<link rel="stylesheet" href="estudiantes.css">
         <link rel="shortcut icon" type="image/x-icon" href="img/logou.ico" />
         <title> 
             Menu de estudiantes
@@ -9,15 +10,16 @@
     </head>
 
     <body>
-        <h1> Universidad RePiquiñas </h1>
+        <h1> <div> <p style="color: #000080 ;"> Universidad WinRiC </p> </div> </h1>
         <hr> <br>
-        <h1> Menú de estudiantes </h1> <br>
+        <h1> <p style="color: #7CFC00;"> Menú de estudiantes </h1> <br>
 
         <p>
-            Favor digite  los campos para la captura del estudiante: <br> <br>
+            <p style="color: #7CFC00;"> Favor digite  los campos para la captura del estudiante: <br> <br>
         </p>
 
         <form action="#" id="form_estudiante">
+		<p style="color: #00008B ;">
             <label> Cógido del programa &nbsp &nbsp &nbsp </label> <input type="text" placeholder="Ingrese código programa" name="codprog_estudiante" id="codprog_estudiante"> <br> <br>
             <label> Identificación del estudiante&nbsp &nbsp &nbsp </label> <input type="text" placeholder="Ingrese id de estudiante" name="id_estudiante" id="id_estudiante"> <br> <br>
             <label> Nombres del estudiante&nbsp &nbsp &nbsp </label> <input type="text" placeholder="Ingrese programa" name="nom_estudiante" id="nom_estudiante"> <br> <br>
