--- a/Componentes/Asignaturas/asignaturas.html
+++ b/Componentes/Asignaturas/asignaturas.html
@@ -2,6 +2,7 @@
 <html>
     <head>
         <meta charset="UTF-8">
+	<link rel="stylesheet" href="asignaturas.css">
         <link rel="shortcut icon" type="image/x-icon" href="img/logou.ico" />
         <title> 
             Menu de asignaturas
@@ -9,15 +10,17 @@
     </head>
 
     <body>
-        <h1> Universidad RePiquiñas </h1>
+        <h1> <div> <p style="color: RED ;"> Universidad WinRiC </p> </div> </h1>
         <hr> <br>
-        <h1> Menú de asignaturas </h1> <br>
+        <h1> <p style="color: BLUE;"> Menú de asignaturas </p> </h1> <br>
 
         <p>
+		<p style="color: DARKRED;">
             Favor digite  los campos para la captura de la asignatura: <br> <br>
         </p>
 
         <form action="#" id="form_asignatura">
+		<p style="color: CYAN;">
             <label> Código del programa &nbsp &nbsp &nbsp </label> <input type="text" placeholder="Ingrese programa" name="codpro_asignatura" id="codpro_asignatura"> <br> <br>
             <label> Código de la asignatura &nbsp &nbsp &nbsp </label> <input type="text" placeholder="Ingrese programa" name="cod_asignatura" id="cod_asignatura"> <br> <br>
             <label> Nombre de la asignatura &nbsp &nbsp &nbsp </label> <input type="text" placeholder="Ingrese programa" name="nom_asignatura" id="nom_asignatura"> <br> <br>
