--- a/Componentes/Notas/notas.html
+++ b/Componentes/Notas/notas.html
@@ -2,6 +2,7 @@
 <html>
     <head>
         <meta charset="UTF-8">
+	<link rel="stylesheet" href="notas.css">
         <link rel="shortcut icon" type="image/x-icon" href="img/logou.ico" />
         <title> 
             Menu de notas
@@ -9,7 +10,7 @@
     </head>
 
     <body>
-        <h1> Universidad RePiquiñas </h1>
+        <h1> <div> <p style="color: #00FF00 ;"> Universidad WinRiC </p> </div> </h1>
         <hr> <br>
         <h1> Menú de notas </h1> <br>
 
@@ -18,6 +19,8 @@
         </p>
 
         <form action="#" id="form_notas">
+		<p style="color: #FFD700 ;">
+		
             <label> Cógido del programa &nbsp &nbsp &nbsp </label> <input type="text" placeholder="Ingrese código programa" name="codprog_nota" id="codprog_nota"> <br> <br>
             <label> Identificación del estudiante&nbsp &nbsp &nbsp </label> <input type="text" placeholder="Ingrese id de estudiante" name="idest_nota" id="idest_nota"> <br> <br>
             <label> Codigo asignatura &nbsp &nbsp &nbsp </label> <input type="text" placeholder="Ingrese código asignatura" name="codasig_nota" id="codasig_nota"> <br> <br>
