--- a/Componentes/Libros/libros.html
+++ b/Componentes/Libros/libros.html
@@ -2,6 +2,7 @@
 <html>
     <head>
         <meta charset="UTF-8">
+	<link rel="stylesheet" href="libros.css">
         <link rel="shortcut icon" type="image/x-icon" href="img/logou.ico" />
         <title> 
             Menu de libros
@@ -9,7 +10,7 @@
     </head>
 
     <body>
-        <h1> Universidad RePiquiñas </h1>
+        <h1> <div> <p style="color: #B22222 ;"> Universidad WinRiC </p> </div> </h1>
         <hr> <br>
         <h1> Menú de libros </h1> <br>
 
