--- a/Componentes/Prestamos/prestamos.html
+++ b/Componentes/Prestamos/prestamos.html
@@ -2,6 +2,7 @@
 <html>
     <head>
         <meta charset="UTF-8">
+	<link rel="stylesheet" href="prestamos.css">
         <link rel="shortcut icon" type="image/x-icon" href="img/logou.ico" />
         <title> 
             Menu de prestamos de libros
@@ -9,15 +10,16 @@
     </head>
 
     <body>
-        <h1> Universidad RePiquiñas </h1>
+        <h1> <div> <p style="color: DarkRed ;"> Universidad WinRiC </p> </div> </h1>
         <hr> <br>
-        <h1> Menu de prestamos de libros </h1> <br>
+        <h1>   Menu de prestamos de libros   </h1> <br>
 
         <p>
-            Favor digite  los campos para la captura del prestamo el libro: <br> <br>
+            <p style="color: #00FFFF ;"> Favor digite  los campos para la captura del prestamo el libro: </p> <br> <br>
         </p>
 
         <form action="#" id="form_prestamos">
+		<p style="color: #4B0082   ;">
             <label> Código del libro &nbsp &nbsp &nbsp </label> <input type="text" placeholder="Ingrese codigo del libro" name="codlib_prestamo" id="codlib_prestamo"> <br> <br>
             <label> Identificación del estudiante&nbsp &nbsp &nbsp </label> <input type="text" placeholder="Ingrese id de estudiante" name="idestu_prestamo" id="idestu_prestamo"> <br> <br>
             <label> Fecha inicial &nbsp &nbsp &nbsp </label> <input type="text" placeholder="Ingrese fecha inicial" name="fecini_prestamo" id="ecini_prestamo"> <br> <br>
